# rl-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  ty.toml
.claude/commands/: check.md  release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md
.github/workflows/: auto-merge.yml  ci.yml
rl_core/: __init__.py
rl_core/algorithms/: __init__.py
rl_core/algorithms/dqn/: __init__.py  network.py  trainer.py
rl_core/algorithms/sac/: __init__.py  network.py  trainer.py
rl_core/buffers/: __init__.py  replay_buffer.py
rl_core/experiments/: __init__.py  metrics.py  run_manager.py
rl_core/nn/: __init__.py  flat_params.py  mlp.py
rl_core/utils/: __init__.py  checkpoint.py  config.py  device.py  logging.py  seeding.py
tests/: test_experiments.py
